# coforge-erp-project-

./: .dockerignore  .gitignore  ARCHITECTURE.md  Architecture  DEMO.md  Dockerfile  Dockerfile.rust_api  README.md  docker-compose.override.yml  docker-compose.yml  main.py  requirements.txt  settings.yaml
config/: settings.yaml
database/: init.sql  seed.sql
django_erp/: .env.example  db_sessions.sqlite3  requirements.txt  server_log.txt
django_erp/core/: services.py  urls.py  views.py
django_erp/django_erp/: asgi.py  settings.py  wsgi.py
django_erp/templates/: base.html  courses.html  dashboard.html  login.html  students.html
python_core/: __init__.py  base.py
python_core/etl/: __init__.py  extractor.py  loader.py  pipeline.py  transformer.py  validator.py
python_core/models/: __init__.py  course.py  department.py  enrollment.py  faculty.py  student.py
python_core/repository/: __init__.py  base_repo.py  student_repo.py
python_core/services/: __init__.py  analytics_service.py  student_service.py
python_core/utils/: __init__.py  exceptions.py  logger.py
rust_api/: .env  Cargo.toml  Dockerfile
rust_api/src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  models.rs
rust_api/src/handlers/: analytics.rs  courses.rs  departments.rs  enrollments.rs  faculty.rs  health.rs  mod.rs  students.rs
tests/: test_etl.py  test_models.py  test_services.py
web_app/: FRONTEND_README.md  app.py
web_app/static/: style.css
web_app/templates/: base.html  courses.html  dashboard.html  departments.html  enrollments.html  faculty.html  login.html  register.html  (+1 more)
(+1 files in other folders)
