[package]
name = "university-erp-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# ── Web framework ────────────────────────────────────
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# ── Database ─────────────────────────────────────────
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# ── Serialization ────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Utilities ────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"

# ── Authentication ───────────────────────────────────
jsonwebtoken = "9"
argon2 = "0.5"
axum-extra = { version = "0.9", features = ["typed-header"] }

